# RAG

./: README.md  docker-compose.yml  main.py  pyproject.toml
data/: DatasetLoad.py  FiQA.py  honeychunk.py
experiments/: test_honeychunk.py
qdrant_storage/: raft_state.json
