[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "pgc0419",email = "pgc0419@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "torch (>=2.11.0,<3.0.0)",
    "transformers (>=5.5.0,<6.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "diffprivlib (>=0.6.6,<0.7.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "datasets (>=4.8.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
